kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webhook-dev
  name: webhook-app
  labels:
    app: webhook-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-app-dev
  template:
    metadata:
      labels:
        app: webhook-app-dev
    spec:
      containers:
        - name: webhook
          image: miguekos1233/webhook-js:1.2
          resources:
            requests:
              cpu: '100m'
              memory: 128Mi
            limits:
              cpu: '200m'
              memory: 256Mi
          ports:
            - containerPort: 3344
