kubernets/ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: webhook-dev
  annotations:
    konghq.com/strip-path: "false"
    # konghq.com/methods: "GET,POST"
    # konghq.com/plugins: "add-response-header"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /webhookwordpress
            pathType: ImplementationSpecific
            backend:
              service:
                name: webhook-service
                port:
                  number: 3344
